[project]
name = "twitter-scraper"
version = "0.2.0"
description = "Twitter推文爬取工具 - 自动爬取指定用户最近推文信息，支持WordPress发布"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "tweepy>=4.14.0",
    "pandas>=1.5.0",
    "requests>=2.25.0",
]
authors = [
    {name = "Twitter Scraper", email = "your-email@example.com"}
]
license = {text = "MIT"}
keywords = ["twitter", "scraper", "social-media", "data-collection", "wordpress", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
twitter-scraper = "src.twitter_scraper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=1.0",
]
